css/stylce.css
@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap");
@font-face {
  font-family: "Helventica";
  src: url(/font/Helvetica-Font/Helvetica-Bold.woff);
  src: url(/font/Helvetica-Font/helvetica-light-587ebe5a59211.woff);
  src: url(/font/Helvetica-Font/Helvetica.woff);
}
html {
  scroll-behavior: smooth;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  overflow-x: hidden;
  font-family: sans-serif;
  font-size: 15px;
  background-color: #eaeaea;
}
nav {
  background-color: #333;
  padding: 1rem;
  color: #fff;
  display: flex;
  justify-content: space-around;
  align-items: center;
  font-family: Lexend Deca;
  text-shadow: 2px 2px 2px #333;
  position: relative;
}
nav ul,
.trick ul {
  display: flex;
  width: 45%;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  list-style: none;
}
nav ul li:hover::after,
.trick ul li:hover::after {
  content: "";
  display: block;
  width: 50%;
  margin: auto;
  padding-bottom: 3px;
  margin-bottom: -8px;
  border-bottom: 5px solid blue;
}
nav ul li a,
.trick ul li a {
  color: #fff;
  text-decoration: none;
  text-transform: uppercase;
}
nav h1 {
  font-size: 2em;
}
/* ngakalin nav */
.trick ul {
  display: none;
}
/* akhir dari  ngakalin nav :) */

/* utilities */
.tombol {
  padding: 0.5rem 0.9rem;
  border-radius: 30px;
  text-transform: uppercase;
  color: #fff;
  background-color: #007bff;
  cursor: pointer;
}
.tombol a {
  color: #fff;
  text-decoration: none;
}
/* end of utilities */
.nav-toggle {
  height: 20px;
  width: 30px;
  display: none;
  flex-direction: column;
  justify-content: space-between;
  position: relative;
}
.nav-toggle span {
  display: block;
  height: 3px;
  background-color: #ccc;
  border-radius: 2px;
}
.nav-toggle span:nth-child(2) {
  transform-origin: 0 0;
  transition: 500ms;
}
.nav-toggle span:nth-child(3) {
  opacity: 1;
  transition: 500ms;
}
.nav-toggle span:last-child {
  transform-origin: 0 100%;
  transition: 500ms;
}
.nav-toggle input:checked ~ span:nth-child(2) {
  transform: rotate(45deg) translate(0, -2px);
  background-color: #fff;
}
.nav-toggle input:checked ~ span:nth-child(3) {
  opacity: 0;
  transform: scale(0);
}
.nav-toggle input:checked ~ span:last-child {
  transform: rotate(-45deg) translate(0px, 2px);
  background-color: #fff;
}
.nav-toggle input {
  opacity: 0;
  width: 50px;
  height: 25px;
  top: -2px;
  left: -10px;
  position: absolute;
  cursor: pointer;
  z-index: 1;
}
.jumbotron {
  background-image: url(../asset/img/jumbotron-bg.jpg);
  background-size: cover;
  height: 640px;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}
.jumbotron::after {
  content: "";
  position: absolute;
  height: 35%;
  width: 100%;
  bottom: 0;
  background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
}
.jumbotron .header {
  text-align: center;
  color: #fff;
  text-shadow: 2px 2px 2px #333;
  width: 60%;
}
.header h1 {
  font-size: 3em;
  font-weight: 100;
}
.header span {
  font-weight: 600;
}
.jumbotron button {
  margin-top: 25px;
}
.info {
  width: 90%;
  margin: -40px auto;
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
  background-color: #fff;
  padding: 1rem;
  border-radius: 12px;
  box-shadow: 0 3px 20px rgba(0, 0, 0, 0.5);
  position: relative;
  z-index: 999;
}
.info-1 {
  flex-wrap: nowrap;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  /* percobaan ok fixed*/
  display: flex;
  align-items: center;
  width: 30%;
}
.info-1 h1 {
  font-size: 16px;
  font-weight: bold;
  text-transform: uppercase;
}
.info-1 p {
  font-size: 14px;
  padding: 0;
  color: #acacac;
}
.info-1 img {
  display: block;
  width: 80px;
}
.info-header {
  padding-left: 0.8rem;
}

/* MAIN CONTENT INCLUDE IMG */
#main {
  width: 90%;
  padding-top: 4rem;
  margin: 100px auto;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: sans-serif;
}
.content-1 {
  display: flex;
  width: 100%;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}
.content-1 img {
  max-width: 100%;
  display: block;
}
.content-1-caption {
  width: 90%;
  height: 300px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 0 0 0 20px;
  margin-top: 20px;
  text-align: center;
}
.content-1 button {
  width: 25%;
  margin: auto;
}
.content-1-caption h4 {
  font-size: 50px;
  text-transform: uppercase;
  font-weight: 100;
}
.content-1-caption span {
  font-weight: 500;
}
.content-1-caption p {
  color: #acacac;
  font-size: 18px;
}

/* FOOTER */

/* BLOCKQUOTE */
footer {
  width: 80%;
  margin: auto;
  text-align: center;
}
blockquote {
  font-size: 30px;
  text-align: center;
  width: 90%;
  padding: 1rem;
  margin: auto;
  color: #333;
  font-style: italic;
  font-family: "Roboto", sans-serif;
}
blockquote::before {
  content: open-quote " ";
}
blockquote::after {
  content: close-quote " ";
}
/* END OF BLOCKQUOTE */

/* SECTION USER */
#user h4 {
  width: 100%;
  font-size: 1.5em;
  text-align: center;
  margin-bottom: 10px;
  position: relative;
}
#user h4::before,
#user h4::after {
  content: "";
  display: block;
  width: 30%;
  height: 3px;
  background-color: #000;
  position: absolute;
}
#user h4::before {
  left: 0;
  top: 50%;
}
#user h4::after {
  right: 0;
  top: 50%;
}
section#user {
  padding-top: 4rem;
  width: 80%;
  margin: auto;
  margin-top: 100px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  overflow: hidden;
}
/* ... */

